[package]
name = "elfloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "elfloader"
crate-type = ["staticlib"]


[dependencies]

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
opt-level = 's'   # turn on maximum optimizations for size.
lto = true        # Link-time-optimizations for further size reduction
